--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Redressed&display=swap');
 body {
     background: url("../images/background.jpg");
     background-size: cover;
@@ -26,10 +26,16 @@ h6 {
     font-family: "Satisfy", cursive;
     text-align: center;
     font-size: 2.5rem;
-    height: 300px;
+    height: 0px;
     font-weight: lighter;
 }
-
+h2 {
+    font-family: "Satisfy", cursive;
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: bolder;
+    margin-top: 0%;
+}
 #post {
     font-family: "vogue";
     letter-spacing: 0.1em;
@@ -48,3 +54,26 @@ h6 {
     height: 600px;
 }
 
+.button {
+    border: none;
+    cursor: pointer;
+    padding: 15px 28px;
+    text-align: center;
+    font-size: 28px;
+    font-family: 'Redressed', cursive;
+    height: 60px;
+    position: relative;
+    margin-bottom: 30%;
+}
+
+.submit{
+    border: none;
+    cursor: pointer;
+    padding: 15px 28px;
+    text-align: center;
+    font-size: 28px;
+    font-family: 'Redressed', cursive;
+    height: 60px;
+    position: relative;
+    margin-bottom: 30%;
+}
