Add the GIF button with some changes to the page layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Redressed&display=swap');
-body {
-    background: url("../images/background.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
 @font-face {
     font-family: "vogue";
     src: url("assets/css/vogue.ttf") format("truetype");
 }
-
+body {
+    background: linear-gradient(
+      rgba(255, 254, 253, 0.6),
+      rgba(255, 254, 253, 0.6)
+    ),url("../images/background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 h1 {
     font-family: "vogue";
     font-size: 15rem;
@@ -21,7 +22,6 @@ h1 {
     color: rgb(71, 53, 53);
     opacity: 0.85;
 }
-
 h6 {
     font-family: "Satisfy", cursive;
     text-align: center;
@@ -36,25 +36,12 @@ h2 {
     font-weight: bolder;
     margin-top: 0%;
 }
-#post {
-    font-family: "vogue";
-    letter-spacing: 0.1em;
-    text-align: center;
-    color: rgb(71, 53, 53);
-    font-weight: 700;
-    height: 600px;
-}
-
-#entries {
-    font-family: "vogue";
-    letter-spacing: 0.1em;
-    text-align: center;
-    color: rgb(71, 53, 53);
-    font-weight: 700;
-    height: 600px;
-}
-
 .button {
+    display: flex;
+    justify-content: center;
+}
+
+.navigate {
     border: none;
     cursor: pointer;
     padding: 15px 28px;
@@ -63,9 +50,38 @@ h2 {
     font-family: 'Redressed', cursive;
     height: 60px;
     position: relative;
-    margin-bottom: 30%;
+    margin:20px;
+    display:flex;
+    border-radius: 8px;
+    background-color: silver;
+    transition-duration: 0.4s;
 }
-
+.navigate:hover {
+    background-color: black;
+    color: white;
+}
+#post {
+    font-family: "vogue";
+    letter-spacing: 0.1em;
+    text-align: center;
+    color: rgb(71, 53, 53);
+    font-weight: 700;
+    height: 700px;
+    margin-top: 200px;
+    margin-bottom: 100px;
+}
+form{
+    font-size: 30px;
+}
+#journalInput {
+    background-color: rgb(238, 213, 190);
+    box-shadow: tan;
+}
+#subject {
+    background-color: rgb(238, 213, 190);
+    width: 400px;
+    height:20px;
+}
 .submit{
     border: none;
     cursor: pointer;
@@ -76,4 +92,43 @@ h2 {
     height: 60px;
     position: relative;
     margin-bottom: 30%;
+    background-color:silver;
+    border-radius: 8px;
+    transition-duration: 0.4s;
+}
+.submit:hover {
+    background-color: black;
+    color: white;
+    
+}
+#word-count{
+    float:inline-end;
+    font-size: 0.875rem;
+    padding: 0.1rem;
+}
+.gif{
+    border: none;
+    cursor: pointer;
+    padding: 15px 28px;
+    text-align: center;
+    font-size: 28px;
+    font-family: 'Redressed', cursive;
+    height: 60px;
+    position: relative;
+    margin-bottom: 30%;
+    background-color:silver;
+    border-radius: 8px;
+    transition-duration: 0.4s;
+}
+.gif:hover {
+    background-color: black;
+    color: white;
+}
+#entries {
+    font-family: "vogue";
+    letter-spacing: 0.1em;
+    text-align: center;
+    color: rgb(71, 53, 53);
+    font-weight: 700;
+    height: 800px;
 }
