--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,12 +101,8 @@ form{
     color: white;
     
 }
-#word-count{
-    float:inline-end;
-    font-size: 0.875rem;
-    padding: 0.1rem;
-}
-.gif{
+
+.gif-button{
     border: none;
     cursor: pointer;
     padding: 15px 28px;
