--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@
 
 body {
     background: linear-gradient(
-      rgba(255, 254, 253, 0.6),
-      rgba(255, 254, 253, 0.6)
+      rgba(255, 254, 253, 0.5),
+      rgba(255, 254, 253, 0.5)
     ),url("../images/background.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -35,7 +35,7 @@ h2 {
 h3 {
     font-family: "Satisfy", cursive;
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: bolder;
 }
 
@@ -74,11 +74,11 @@ h3 {
     height: 700px;
     margin-top: 200px;
     margin-bottom: 100px;
-    padding-top:30px;
+    padding-top:45px;
 }
 
 form{
-    font-size: 30px;
+    font-size: 20px;
 }
 
 #journalInput {
@@ -95,11 +95,11 @@ form{
 .submit{
     border: none;
     cursor: pointer;
-    padding: 15px 28px;
+    padding: 10px 20px;
     text-align: center;
-    font-size: 28px;
+    font-size: 20px;
     font-family: 'Redressed', cursive;
-    height: 60px;
+    height: 50px;
     position: relative;
     margin-bottom: 30%;
     background-color:silver;
@@ -116,11 +116,11 @@ form{
 .gif-button{
     border: none;
     cursor: pointer;
-    padding: 15px 28px;
+    padding: 10px 20px;
     text-align: center;
-    font-size: 28px;
+    font-size: 20px;
     font-family: 'Redressed', cursive;
-    height: 60px;
+    height: 50px;
     position: relative;
     margin-bottom: 30%;
     background-color:silver;
@@ -139,6 +139,7 @@ form{
     font-weight: 700;
     height: 800px;
     padding-top: 30px;
+    
 }
 
 #subjectCount {
@@ -152,4 +153,18 @@ form{
 
 #gifContainer {
     height: 30px;
+}
+
+#postsContainer {
+    background-color: rgba(255, 255, 255, 0.8);
+    margin: 0 auto;
+    width: 850px;
+    height: 600px;
+    overflow-y:auto;
+}
+
+#giphy {
+    width: 300px;
+    height:25px;
+    margin: 0 auto;
 }
