--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Redressed&display=swap");
 @font-face {
     font-family: "vogue";
-    src: url("assets/css/vogue.ttf") format("truetype");
+    src: url("vogue.ttf") format("truetype");
 }
 
 body {
