--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,6 +195,16 @@ form {
 .emoji,
 .comment {
     padding: 15px 12px;
+    cursor: pointer;
+}
+
+.emoji {
+    font-size: 1.5rem;
+}
+
+.emoji:hover {
+    color: rgb(0, 0, 0);
+    font-size: 2rem;
 }
 
 .imgFormat {
