add styling to appended gif

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,7 +182,7 @@ form {
 .newCommentMessage {
     font-size: 15px;
     font-family: "Montserrat", sans-serif;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
 }
 
 .formCommentInput {
@@ -199,15 +199,20 @@ form {
 }
 
 .emoji {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
 }
 
 .emoji:hover {
     color: rgb(0, 0, 0);
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 
 .imgFormat {
+    max-block-size: 10rem;
+    margin: 12px auto;
+}
+
+#gifOnPost {
     max-block-size: 10rem;
     margin: 12px auto;
 }
