--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,13 +32,43 @@ h2 {
     height: 0px;
     font-weight: lighter;
     padding-top: 2rem;
-    padding-bottom: 3rem;
+    padding-bottom: 6rem;
 }
 h3 {
     font-family: "Montserrat", sans-serif;
     text-align: center;
     font-size: 2rem;
     font-weight: bolder;
+}
+
+h1,
+h2,
+.navigate {
+    position: relative;
+    -webkit-animation-name: animatebottom;
+    -webkit-animation-duration: 2s;
+    animation-name: animatebottom;
+    animation-duration: 2s;
+}
+@-webkit-keyframes animatebottom {
+    from {
+        bottom: -50px;
+        opacity: 0;
+    }
+    to {
+        bottom: 0px;
+        opacity: 1;
+    }
+}
+@keyframes animatebottom {
+    from {
+        bottom: -50px;
+        opacity: 0;
+    }
+    to {
+        bottom: 0;
+        opacity: 1;
+    }
 }
 
 .button {
@@ -52,7 +82,6 @@ h3 {
     padding: 15px 28px;
     text-align: center;
     font-size: 28px;
-    /* font-family: "Redressed", cursive; */
     font-family: "Montserrat", sans-serif;
     height: 60px;
     position: relative;
@@ -80,6 +109,32 @@ h3 {
     padding-top: 45px;
 }
 
+#spin:after {
+    content: "";
+    animation: spin 7s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        content: "THOUGHTS";
+    }
+    20% {
+        content: "OPINIONS";
+    }
+    40% {
+        content: "VIEWS";
+    }
+    60% {
+        content: "STORY";
+    }
+    80% {
+        content: "DREAMS";
+    }
+    100% {
+        content: "THOUGHTS";
+    }
+}
+
 form {
     font-size: 22px;
 }
@@ -101,7 +156,6 @@ form {
     padding: 10px 20px;
     text-align: center;
     font-size: 20px;
-    /* font-family: "Redressed", cursive; */
     font-family: "Montserrat", sans-serif;
     height: 50px;
     position: relative;
@@ -116,22 +170,20 @@ form {
     color: white;
 }
 
-.gif-button {
+#gif-button {
     border: none;
     cursor: pointer;
-    padding: 10px 20px;
+    padding: 5px 10px;
     text-align: center;
-    font-size: 20px;
-    /* font-family: "Redressed", cursive; */
+    font-size: 12px;
     font-family: "Montserrat", sans-serif;
-    height: 50px;
+    height: 30px;
     position: relative;
-    margin-bottom: 30%;
     background-color: silver;
     border-radius: 8px;
     transition-duration: 0.4s;
 }
-.gif:hover {
+#gif-button:hover {
     background-color: black;
     color: white;
 }
@@ -155,7 +207,6 @@ form {
 }
 
 #gifContainer {
-    height: 30px;
     display: inline-block;
 }
 
@@ -207,11 +258,29 @@ form {
 }
 
 .imgFormat {
-    max-block-size: 10rem;
+    max-block-size: 8rem;
     margin: 12px auto;
 }
 
 #gifOnPost {
     max-block-size: 10rem;
     margin: 12px auto;
+}
+
+.formCommentSubmitButton {
+    border: none;
+    cursor: pointer;
+    padding: 5px 10px;
+    text-align: center;
+    font-size: 12px;
+    font-family: "Montserrat", sans-serif;
+    height: 30px;
+    position: relative;
+    background-color: silver;
+    border-radius: 8px;
+    transition-duration: 0.4s;
+}
+.formCommentSubmitButton:hover {
+    background-color: black;
+    color: white;
 }
