--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@
     src: url("vogue.ttf") format("truetype");
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: linear-gradient(
             rgba(255, 254, 253, 0.85),
@@ -281,6 +285,28 @@ form {
     transition-duration: 0.4s;
 }
 .formCommentSubmitButton:hover {
+    background-color: black;
+    color: white;
+}
+
+.backToTop {
+    border: none;
+    cursor: pointer;
+    padding: 10px 20px;
+    text-align: center;
+    font-size: 20px;
+    font-family: "Montserrat", sans-serif;
+    height: 45px;
+    background-color: silver;
+    border-radius: 8px;
+    transition-duration: 0.4s;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 80px;
+}
+
+.backToTop:hover {
     background-color: black;
     color: white;
 }
